# ideabot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AIOGRAM_API_FIX.md  DEPLOYMENT.md  Dockerfile  QUICK_DEPLOY.md  RAILWAY_FIX.md  README.md  TELEGRAM_CONFLICT_FIX.md  URGENT_FIX.md  WEBHOOK_SETUP.md  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: decision_bot_prd.md  implementation_plan.mdc
rules/: file_structure_document.mdc   tech_stack_document.mdc
src/: __init__.py  config.py
src/handlers/: __init__.py  decision_handler.py
src/services/: __init__.py  openai_client.py  option_parser.py
tests/: __init__.py  test_smoke.py
